--- a/src/sass/mixins/_tab-sidebar.scss
+++ b/src/sass/mixins/_tab-sidebar.scss
@@ -14,7 +14,7 @@
 	.tab-sidebar {
 		width: $width;
 		position: absolute;
-		right: $grid-gutter-width/2;
+		right: $main-padding/2;
 		top: 0;
 	}
 
@@ -29,7 +29,7 @@
 
 		// Increase the padding a bit
 		@media(min-width: $screen-sm + 1px) {
-			padding-left: $grid-gutter-width;
+			padding-left: $main-padding;
 		}
 	}
 
@@ -65,8 +65,10 @@
 	}
 
 	// Remove the top margin of the first pill so it's flush with the form fieldsets
-	.nav-pills li:first-child a {
-		margin-top: 0;
+	@media(min-width: $screen-sm + 1px) {
+		.nav-pills li:first-child a {
+			margin-top: 0;
+		}
 	}
 
 	// Set the active state of the pills, overriding bootstrap
@@ -82,25 +84,34 @@
 	
 	// Breaking changes
 	@media(max-width: $screen-sm) {
-		.frag-main-col {
-			width: 100%;
-			padding: 30px;
-			padding-bottom: 100px;
-		}
 
-		// Make the pills float on mobile
-		.nav-pills li {
-			float:left;
-			margin-right: 4px;
-			margin-top: 4px;
-		}
-
+		// Make full width
 		.tab-sidebar {
-			width: 100%;
-			padding: 10px 30px 0 30px;
-			position: relative;
-			right: 0;
-			top: 0;
+			position: static;
+			width: auto;
+			padding: $main-padding/2;
+			padding-top: 0;
+		}
+
+		// Make locale not span full width
+		.locale {
+			width: $width;
+			margin-right: $main-padding/2;
+			margin-bottom: 4px;
+		}
+
+		// Make the pills a list on mobile
+		.nav-pills li {
+			display: inline-block;
+			a {
+				margin: 2px 1px;
+			}
+		}
+
+		// Make full width
+		.tab-content {
+			margin-right: 0;
+			padding: 0 $main-padding/2;
 		}
 	}
 
